# Mandelbrot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  runTests.sh
include/: app.h  complex.h  complex_nums.h  draw_mandelbrot.h  tests.h
src/: app.cpp  complex_nums.cpp  draw_mandelbrot.cpp  main.cpp  tests.cpp
tests/: runTests.sh
tests/plot/: build_plot.py  plot.sh
